# create-tauri-app

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE  LICENSE.spdx  LICENSE_MIT  README.md  create-tauri-app.ps1  create-tauri-app.sh  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  socket.yml
.cargo/: config.toml
.changes/: 502_upgrade_leptos_template.md  aarch64-pc-windows.md  add-preact-templates.md  allowlist-false.md  alpha-api.md  alpha-tempalte-window-plugin-removal.md  alpha-template.md  alpha.1.md  alpha.10.md  alpha.11.md  alpha.2.md  alpha.3.md  alpha.4.md  alpha.5.md  alpha.6.md  alpha.7.md  angluar-template-rc.md  angluar.md  angular-17.md  angular-analytics.md  angular-before-dev.md  angular-config-file.md  angular-missing-tauri-script.md  angular.md  apple-x64.md  arm64-publish.md  beta.md  blazor-on-submit.md  blazor-template-import-fix.md  blazor.md  bun-pm.md  cargo-feature.md  cargo-lock-proc-macro2.md  cargo-package.md  changes.md  clean-target-dir.md  cleaning-existing-dir.md  cli-node.md  clojurescript.md  config.json  (+142 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  change-status-on-PR.yml  cli-test.yml  clippy.yml  covector-status.yml  covector-version-or-publish.yml  deploy-scripts-worker.yml  deploy-scripts.yml  fmt-fragments.yml  fmt.yml  fragments-test.yml  npm-grunt.yml  npm-gulp.yml  publish-binaries.yml  publish-napi.yml  publish.yml  rust.yml  templates-test.yml  test.yml  webpack.yml
.scripts/: generate-templates-matrix.js  sync-scripts-tagname.js  sync-tagname.js
__tests__/: cli.spec.js  cli.spec.ts  template.spec.ts
fragments/fragment-react/: index.html  package.json  vite.config.js
fragments/fragment-react-ts/: index.html  package.json  vite.config.ts
fragments/fragment-solid/: index.html  package.json  vite.config.js
fragments/fragment-solid-ts/: index.html  package.json  tsconfig.json  vite.config.ts
fragments/fragment-svelte/: index.html  package.json  vite.config.js
fragments/fragment-svelte-ts/: index.html  package.json  vite.config.ts
fragments/fragment-vue/: index.html  (+2 more)
node/: .gitignore  .npmignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  create-tauri-app.js  index.js  package.json  pnpm-lock.yaml
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-universal/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/linux-arm-gnueabihf/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md
node/npm/win32-ia32-msvc/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs
scripts/: cta.ps1  cta.sh
src/: args.rs  category.rs  cli.rs  colors.rs  deps.rs  index.ts  lib.rs  main.rs  manifest.rs  package-manager.ts  package_manager.rs  shell.ts  template.rs
tauri-app/: package.json  pnpm-lock.yaml  vite.config.ts
template-react/: README.md  index.html  package.json
template-react-ts/: README.md  package.json
template-react-ts/src-tauri/: Cargo.toml  tauri.conf.json
template-react-ts/src-tauri/icons/: icon.icns
template-solid/: package.json
template-solid-ts/: package.json  vite.config.ts
template-svelte/: index.html  package.json
template-svelte-ts/: index.html  package.json
template-vanilla/: package.json
template-vue/: index.html  package.json
template-vue-ts/: index.html  package.json
test/: spawn.test.mjs
worker/: .gitignore  README.md  index.html  index.js  package.json  pnpm-lock.yaml
(+295 files in other folders)
