[package]
name = "create-tauri-app"
description = "Rapidly scaffold out a new tauri app project."
authors = ["Tauri Programme within The Commons Conservancy"]
version = "1.0.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/tauri-apps/create-tauri-app"
keywords = ["tauri"]
categories = ["gui"]

[dependencies]
anyhow = "1.0.58"
dialoguer = "0.10.1"
pico-args = "0.5.0"
rust-embed = { version = "6.4.0", features = [
    "compression",
    "interpolate-folder-path",
] }


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true
