[package]
edition = "2021"
name = "create-tauri-app-node"
version = "1.0.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.6.3", default-features = false, features = ["napi4"] }
napi-derive = "2.6.0"
create-tauri-app = ".."

[build-dependencies]
napi-build = "2.0.1"
